--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,8 @@ html lang="en"
               a href="#"
                 span
               section class="top-bar-section"
+                ul class="left"
+                  li= link_to 'Companies', companies_path
                 ul class="right"
                   li class="has-dropdown"
                     a href="#"= current_user.name
