Changed expiration_days by expiration_date

--- a/app/views/gift_cards/_gift_card.html.slim
+++ b/app/views/gift_cards/_gift_card.html.slim
@@ -2,6 +2,7 @@ tr
   td= gift_card.user.name
   td= gift_card.code
   td= gift_card.value
+  td= gift_card.expiration_date
   td= gift_card.human_state_name
   td
     ul class="button-group round"
