--- a/app/views/gift_cards/index.html.slim
+++ b/app/views/gift_cards/index.html.slim
@@ -7,6 +7,7 @@
         th= GiftCard.human_attribute_name(:user)
         th= GiftCard.human_attribute_name(:code)
         th= GiftCard.human_attribute_name(:value)
+        th= GiftCard.human_attribute_name(:expiration_date)
         th= GiftCard.human_attribute_name(:state)
         th
     tbody
