--- a/app/views/gift_cards/new.html.slim
+++ b/app/views/gift_cards/new.html.slim
@@ -4,7 +4,7 @@
 	= label_tag(:number, "* Number")
 	= text_field_tag(:number)
 	= form.input :value
-	= form.input :expiration_days
+	= form.input :expiration_date
 	= label_tag :company, 'Company'
 	= select("gift_card", "company_id", Company.all.collect {|c| [ c.name, c.id ] })
 	= form.button :submit
