--- a/app/assets/stylesheets/gift_cards.scss
+++ b/app/assets/stylesheets/gift_cards.scss
@@ -4,6 +4,8 @@
 	margin: 10px;
 	margin-top: 0px;
 	margin-left: 0px;
+    width: 100%;
+    height: 100vh;
 }
 
 .gift_card_template_value {
@@ -20,4 +22,9 @@
     bottom: -4px;
     position: absolute;
     left: 121px;
+}
+
+.gift_card_template_img {
+    width: 100%;
+    height: 100vh;
 }
