Added download by  pdf or images

--- a/app/assets/stylesheets/gift_cards.scss
+++ b/app/assets/stylesheets/gift_cards.scss
@@ -10,11 +10,11 @@
 
 .gift_card_template_value {
     position: absolute;
-    bottom: 90px;
-    left: 130px;
+    bottom: 118px;
+    left: 166px;
     color: white;
     font-weight: bold;
-    font-size: 23px;
+    font-size: 33px;
     font-family: 'Times new roman';
 }
 
@@ -22,6 +22,11 @@
     bottom: -4px;
     position: absolute;
     left: 121px;
+    font-size: 21px;
+    background-color: white;
+    padding: 6px;
+    border-radius: 9px;
+    left: 148px;
 }
 
 .gift_card_template_img {
