--- a/app/views/gift_cards/_fisical_gift_card.html.slim
+++ b/app/views/gift_cards/_fisical_gift_card.html.slim
@@ -1,5 +1,5 @@
 .gift_card_template_container
-	= image_tag company_url, class: 'gift_card_template_img'
+	= wicked_pdf_image_tag company_url, class: 'gift_card_template_img'
   	p.gift_card_template_value
   		= number_to_currency fisical_gift_card.value, :precision => 0
   	p.gift_card_template_code
