--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,6 +23,7 @@ html lang="en"
                 span
               section class="top-bar-section"
                 ul class="left"
+                  li= link_to 'Gift Cards', root_path
                   li= link_to 'Companies', companies_path
                 ul class="right"
                   li class="has-dropdown"
